// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON Schema generator evaluates intersection type 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "IntersectionResponse": {
      "allOf": [
        {
          "additionalProperties": true,
          "properties": {
            "id": {
              "type": "string",
            },
          },
          "required": [
            "id",
          ],
          "type": "object",
        },
        {
          "additionalProperties": true,
          "properties": {
            "name": {
              "type": "string",
            },
          },
          "required": [
            "name",
          ],
          "type": "object",
        },
      ],
    },
  },
}
`;

exports[`JSON Schema generator produces definitions 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "User": {
      "additionalProperties": true,
      "properties": {
        "id": {
          "type": "string",
        },
        "name": {
          "type": "string",
        },
      },
      "required": [
        "id",
        "name",
      ],
      "type": "object",
    },
    "Users": {
      "items": {
        "$ref": "#/definitions/User",
      },
      "type": "array",
    },
  },
}
`;

exports[`JSON Schema generator produces minimal json schema 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {},
}
`;
